2022-12-06  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): reset
        only those graphical parameters that plotseries
        actually changes

2022-12-02  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): compute
        returns only if required for labels
        (plotseries.default): reset graphical parameters
        on exit
        (.spread_labels): set trade-off overlap/distance to
        best position to 2, i.e. overlap is twice as bad as
        distance; handle NAs

2022-11-23  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default):
        experimental support for zoo::yearmon

2022-11-02  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): pass
        argument "type" on to "lines"

2022-10-13  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): add parameters
        'streaks.up.labels.cex' and 'streaks.down.labels.cex'

2022-09-20  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): check
        whether "series.type" is supported

2022-08-02  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add 'bundesbank'

2022-06-29  Enrico Schumann  <es@enricoschumann.net>

        * .Rbuildignore: add file, ignore README

2022-05-29  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'streaks.relative', with default TRUE, to
        support argument 'relative' of PMwR::streaks

2022-03-17  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add arguments
        'streaks.up.labels.col' and 'streaks.down.labels.col'

2022-01-27  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (last.format): add rudimentary
        support for numeric t, such as  integers 1, 2, ...
