@@ -1,3 +1,9 @@
+2022-12-09  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/plotseries.R (plotseries.zoo): add argument
+        "bm"; keep only timestamps in "bm" that are
+        also in "series"
+
 2022-12-06  Enrico Schumann  <es@enricoschumann.net>
 
         * R/plotseries.R (plotseries.default): reset
